--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,60 @@
 .logoutBtn:hover {
     background-color: #FF1F1F;
 }
+
+
+.filters-container {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .filters {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  
+  .filters label {
+    margin: 10px;
+    font-weight: bold;
+  }
+  
+  .filters select,
+  .filters input {
+    margin-left: 5px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .charts-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+  
+  .chart {
+    width: 100%;
+    max-width: 600px; /* Limit the width of each chart */
+    margin: 10px;
+  }
+  
+  .logout-container {
+    margin-top: 20px;
+  }
+  
+  /* Media Queries for Responsiveness */
+  @media (max-width: 768px) {
+    .filters {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .chart {
+      width: 100%; /* Full width on small screens */
+    }
+  }
